# prod-ml-sys

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: ci.yml
services/inference_service/: Dockerfile  pyproject.toml
services/inference_service/src/inference_service/: logger.py  main.py  model.py  schemas.py
services/inference_service/tests/: test_health.py
services/tests/: test_cli_smoke.py
services/training_service/: Dockerfile  pyproject.toml
services/training_service/src/training_service/: cli.py
shared_artifacts/run1/: model.pkl  params.json
