[project]
name = "training_service"
version = "0.1.0"
description = "Minimal training CLI that outputs model + metrics artifacts"
requires-python = ">=3.10" 
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3"
]

[project.scripts]
train-model = "training_service.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"